fix: correct deployed site styling and add branding assets
- Update background image paths from absolute to relative for GitHub Pages subdirectory compatibility
- Add transparent background-color to prevent theme override on background images
- Configure favicon and logo in config.toml
- Fix absolute image paths in content markdown files
- Add favicon, logo, and PWA manifest assets

--- a/config.toml
+++ b/config.toml
@@ -39,6 +39,11 @@ unsafe = true
 
 [params.assets]
 customCSS = ["css/custom.css"]
+favicon = "favicon.ico"
+
+[params.label]
+icon = "images/logo/logo.png"
+iconHeight = 40
 [[menu.main]]
 name = "Home"
 url = "/"
